@@ -118,6 +118,13 @@ DEB_UDEB_PACKAGES = libc-udeb
 # Don't run dh_strip on this package
 NOSTRIP_$(libc)-dbg = 1
 
+# Generic kernel version check
+kernel_check = $(shell if [ $(CURRENT_KERNEL_VERSION) -ge $(1) ]; then \
+  echo ""; \
+else \
+  echo '$$(error You must running at least kernel version $(1) to compile this.)'; \
+fi)
+
 # Pull in all the per-arch magic!
 
 -include debian/sysdeps/$(DEB_HOST_GNU_SYSTEM).mk
